tests/context-tests/expectations/fail/with_empty_type_variables.orb.expectation
#Contains
Expected Type/Value Variables after Context declaration